# mlb-rivalry-tracker

./: .gitignore  .mm-attributes  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  rivalry_tracker.py  team colors.xlsx  test.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
.snyk.d/: import.yml
ADHOC/: RT19_00001807_Surrender_and_1035_CATS_Transactions_With_InForce_Info.sql
ADHOC/Business Analytics/: LA Claims Actual Union Forecast.txt
ADHOC/Business Analytics/DEV/: AC Jay Envision.sql  Actual and Forecast.SQL  Ann Ops Historical Details - CURRENT Jay Envision.sql  Ann Ops Historical Details - Point in Time Jay Envision  (1).sql  Annuity Capacity.sql  Capacity.sql  Capacity_Union.sql  Demand with Non-Rec Prod.sql  LA Claims Actual Union Forecast.SQL  LA Claims Daily Time Prod.sql  LA Claims Historical Details - Current_JayEnvision.sql  LA Claims Historical Details - Point in Time_ Envision_Jay.sql  LA Claims History and Forecast.sql  LA Claims History and Forecast_v2.sql  LC_Capacity Details.sql  LC_Capacity_NonProd_Details_Test.sql  LC_Capacity_NonProd_Details_Test_Drop.sql  LC_Forecast_Executive.sql  Life Claims Notice Monitoring.sql  Load to Performance Fct vw.sql  TAX-LPI Historical Details - Current_Jay_Envision_Union.sql  Waiver of PremiumJay_V2.sql  Waiver of Premium_Jay.sql
ADHOC/Business Analytics/Prod/: LC_Actual and Forecast.sql  LC_Capacity Details2_18_2021.sql  LC_Forecast_Executive.sql
TABLEAU/EXTRACTS/BI/: TIME_ANALYSIS.sql
TABLEAU/EXTRACTS/DEV/ANB/: ANB BINGO DASH IR.sql  ANB BINGO DASH SE2.sql  ANB BINGO DASH.sql  ANB BINGO IR Extract.sql  ANB BINGO IR and SE2.sql  ANB BINGO IR.sql  ANB BINGO SE2 Extract.sql  ANB BINGO SE2.sql  ANB Contract Level Extract.sql  ANB Inventory Details Extract.sql  (+8 more)
TABLEAU/EXTRACTS/DIC/: DIC Daily Time.sql  DIC Daily Transactions.sql  Daily Time.sql  Daily Transactions.sql  Historical - Current.sql
TABLEAU/EXTRACTS/LPI/: LPI Daily Time.sql  LPI Executive Transactions.sql  LPI Historical Time.sql
TABLEAU/EXTRACTS/PROD/: Data Source and Dashboards.xlsx  MMUS Operations TimeOut Analysis.sql
TABLEAU/EXTRACTS/PSC/: PSC Daily Lead Time.sql  PSC Daily Time.sql  PSC Daily Transactions.sql  PSC Executive Transactions.sql  PSC Historical Details - Current.sql  PSC Historical Time.sql  PSC Lead Time - Current.sql  PSC Lead Time - PIT.sql  PSC Payment Rejects.sql
TABLEAU/WORKBOOKS/: 1191 - Annuity New Business Inventory Analysis Dashboard Modern Data v2.twbx  Git Test workflow.bak  Git Test workflow.yxmd
mlb_rivalry_tracker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
rivalry_tracker/: __init__.py  __main__.py  cli.py  config.py  main.py
rivalry_tracker/analysis/: __init__.py  stats.py
rivalry_tracker/api/: __init__.py  fetcher.py
rivalry_tracker/visualization/: __init__.py  charts.py
tests/: __init__.py  conftest.py  test_analysis.py  test_cli.py  test_config.py  test_fetcher.py
(+230 files in other folders)
