[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlb-rivalry-tracker"
version = "1.1.0"
description = "Analyze and visualize MLB rivalries between any two teams over a custom year range"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "btiscia"}
]
keywords = ["mlb", "baseball", "statistics", "rivalry", "visualization", "sports"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Topic :: Scientific/Engineering :: Visualization",
]

dependencies = [
    "MLB-StatsAPI>=1.7.0",
    "pandas>=2.0.0",
    "plotly>=5.0.0",
    "matplotlib>=3.7.0",
    "tqdm>=4.65.0",
    "openpyxl>=3.1.0",
    "Jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pandas-stubs>=2.0.0",
]

[project.scripts]
rivalry-tracker = "rivalry_tracker.main:main"

[project.urls]
Homepage = "https://github.com/btiscia/mlb-rivalry-tracker"
Repository = "https://github.com/btiscia/mlb-rivalry-tracker"
Issues = "https://github.com/btiscia/mlb-rivalry-tracker/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["rivalry_tracker*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
target-version = "py39"
line-length = 100
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B905",   # zip without explicit strict
]

[tool.ruff.per-file-ignores]
"tests/*" = ["ARG001"]  # Unused function argument (fixtures)

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.coverage.run]
source = ["rivalry_tracker"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
